# Un-mini-Syst-me-de-Gestion-de-Fichiers-SGF-en-C-

./: CMakeLists.txt  main.cpp
include/: Directory.hpp  File.hpp  FileHandle.hpp  FileSystem.hpp  Utils.hpp  dirent_compat.hpp
src/: Directory.cpp  File.cpp  FileHandle.cpp  FileSystem.cpp
